fixed contacts search, removed left border on mobile

--- a/public/bootcards/css/bootcards-ios.css
+++ b/public/bootcards/css/bootcards-ios.css
@@ -159,6 +159,7 @@ input[type="color"],
 
 @media (max-width:767px) {
 	.row > div { border-left: 0; }
+	.container > .row > div:last-child { border-left: 0; }
 }
 
 @media (min-width:768px) and (max-width:992px) {
